# EchoLab

./: README.md  pyproject.toml
config/: test.yaml
config/models/: velmap_2d.yaml  velmap_2d_hd.yaml  velmap_2d_improved.yaml
config/openanfwi/: test.yaml
config/openfwi/: hd.yaml  test.yaml
docs/: index.md
docs/cli/: WAVELET_CLI_DOCUMENTATION.md
docs/methods_classes/: IMPLEMENTATION_NOTES.md
echolab/: __main__.py  cli.py  cli_wavelets.py
echolab/cli_commands/: __init__.py  generate_models_cli.py
echolab/modeling/: README.md  __init__.py  acoustic_field.py  generate_models.py  layer_generation.py  model_generation_config.py  noise.py  simulator.py  validation.py  velocity_map.py  velocity_map_pydantic.py  velocity_model.py  velocity_model_pydantic.py  velocity_models.py  wavelets.py
echolab/modeling/backup/: data_augmentation.py  generate_models.py  model_generation_config.py  velocity.py  velocity_model.py
echolab/modeling/generation/: __init__.py  data_augmentation.py  generate_models.py  layer_generation.py  model_generation_config.py
echolab/modeling/velocity/: __init__.py  maps.py  models.py
examples/: heat_equation_2d.py  pendulum_1d.py
tests/: standalone_test.py  test_cli_wavelets_direct.py  test_openanfwi_simulator.py  test_openfwi.py  test_openfwi_simulator.py  test_ricker.py  test_ricker_direct.py  test_ricker_file_direct.py  test_ricker_simple.py  test_velocity_model.py  test_velocity_model_pydantic.py  test_velocity_model_simple.py  test_wavelet_cli.py  test_wavelets_direct.py
tutorials/sympy/: gotchas.ipynb  introduction.ipynb
(+19 files in other folders)
